[project]
name = "portfolio-opt"
version = "0.1.0"
description = "Tool for optimizing portfolio asset allocation to maximize performance metrics like Sharpe Ratio"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.0",
    "scipy==1.12.0",
    "streamlit==1.31.1",
    "plotly==5.18.0",
    "cufflinks==0.17.3",
    "chart-studio==1.1.0",
    "yfinance==0.2.54",
    "pandas-datareader==0.10.0",
    "curl-cffi==0.5.0",
]

[tool.uv]
dev-dependencies = [
    "pytest==8.3.0",
    "pytest-asyncio==0.24.0",
]

[tool.hatch.build.targets.wheel]
packages = ["portfolio_opt"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

